[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sierraecg"
version = "0.4.0"
description = "Sierra ECG Tools for Python"
readme = "README.md"
authors = [{ name = "Christopher Watford", email = "christopher.watford@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ecg", "sierraecg", "xml"]
dependencies = [
    "defusedxml",
    "numpy",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/sixlettervariables/sierra-ecg-tools"

[project.optional-dependencies]
dev = [
    # Testing.
    "tox",

    "pytest",
    "pytest-cov",

    # Type checking.
    "mypy",
    # As of mypy 0.900, mypy no longer bundles the stubs for third-party libraries that reside
    # in the typeshed project. Add these "types-" packages here if you depend on them in
    # requirements.in (e.g. types-requests).
    # See: http://mypy-lang.blogspot.com/2021/06/mypy-0900-released.html
    #      https://github.com/python/typeshed/tree/master/stubs

    # Linting.
    "flake8", 
    "flake8-bugbear",
    "flake8-broken-line",
    "flake8-comprehensions",
    "pep8-naming",

    # Formatting.
    "black",
    "isort",

    # Setup
    "pip-tools",
    "bumpver",

    # Documentation.
    "mkdocs-material",
    "mkdocs-htmlproofer-plugin",
    "mkdocstrings[python]",

    ## Autodoc.
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
# If certain strict config options are too pedantic for a project,
# disable them selectively here by setting to false.

[tool.black]
# Use the more relaxed max line length permitted in PEP 8.
line-length = 99
target-version = ["py39", "py310", "py311", "py312", "py313"]
# black will automatically exclude all files listed in .gitignore
# If you need to exclude additional folders, consider using extend-exclude to avoid disabling the
# default .gitignore behaviour.

[tool.isort]
profile = "black"
line_length = 99
force_sort_within_sections = true
# Inform isort of paths to import names that should be considered part of the "First Party" group.
src_paths = ["src/sierraecg"]
skip_gitignore = true
# If you need to skip/exclude folders, consider using skip_glob as that will allow the
# isort defaults for skip to remain without the need to duplicate them.

[tool.pytest.ini_options]
filterwarnings = [
    # When running tests, treat warnings as errors (e.g. -Werror).
    # See: https://docs.pytest.org/en/latest/reference/reference.html#confval-filterwarnings
    "error",
    # Add additional warning supressions as needed here. For example, if a third-party library
    # is throwing a deprecation warning that needs to be fixed upstream:
    # "ignore::DeprecationWarning:typer",
]

[tool.coverage.run]
branch = true

[tool.check-manifest]
ignore = [".dockerignore", ".editorconfig", "Dockerfile"]

[tool.bumpver]
current_version = "0.4.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/sierraecg/__init__.py" = ["{version}"]
